--- a/2.ML_model/2.machine_learning_env.yml
+++ b/2.ML_model/2.machine_learning_env.yml
@@ -5,3 +5,6 @@ dependencies:
   - conda-forge::python=3.8.13
   - conda-forge::jupyter=1.0.0
   - conda-forge::pandas=1.4.2
+  - conda-forge::scikit-learn=1.1.1
+  - conda-forge::matplotlib=3.5.2
+  - conda-forge::seaborn=0.11.2
