--- a/phenotypic_profiling_env.yml
+++ b/phenotypic_profiling_env.yml
@@ -8,3 +8,4 @@ dependencies:
   - conda-forge::scikit-learn=1.1.1
   - conda-forge::matplotlib=3.5.2
   - conda-forge::seaborn=0.11.2
+  - conda-forge::shapely=1.8.5
