--- a/phenotypic_profiling_env.yml
+++ b/phenotypic_profiling_env.yml
@@ -2,9 +2,13 @@ name: phenotypic_profiling
 channels:
   - conda-forge
 dependencies:
-  - conda-forge::python=3.8.13
+  - conda-forge::python=3.9
   - conda-forge::jupyter=1.0.0
   - conda-forge::pandas=1.4.2
   - conda-forge::scikit-learn=1.1.1
   - conda-forge::matplotlib=3.5.2
   - conda-forge::seaborn=0.11.2
+  - conda-forge::pip=22.1.2
+  - pip:
+      - ccc-coef==0.1.6
+  
