add parquet support to env

--- a/phenotypic_profiling_env.yml
+++ b/phenotypic_profiling_env.yml
@@ -6,6 +6,8 @@ dependencies:
   - conda-forge::jupyter=1.0.0
   - conda-forge::pandas=1.4.2
   - conda-forge::scikit-learn=1.1.1
+  - conda-forge::fastparquet
+  - conda-forge::pyarrow
   - conda-forge::matplotlib=3.5.2
   - conda-forge::seaborn=0.11.2
   - conda-forge::pip=22.1.2
